--- a/css/index.css
+++ b/css/index.css
@@ -12,19 +12,19 @@
     #1d1d1d 90.49%
   );
   max-width: 1920px;
-  height: 313px;
+  height: 250px;
   position: relative;
   z-index: 2;
-  color: white;
+  color: white;                    
 
   div {
     max-width: 1920px;
-    height: 313px;
-    background-image: url("../image/backgroundImage.png");
+    height: 250px;
+    background: #1d1d1d url(../image/backgroundImage.png) no-repeat right / 388.05px 368.16px;
     background-repeat: no-repeat;
     background-position: 105% 0%;
-    /* background-size: 35%; */
-    padding: 25px 0 10px 50px;
+    background-size: 35%;
+    padding: 25px 0 15px 50px;
   }
 
   h3 {
@@ -36,17 +36,17 @@
     line-height: 36.57px;
     letter-spacing: 0.1854em;
     text-align: left;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 
   p {
     max-width: 1148px;
-    height: 89px;
+    min-height: 89px;
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
     line-height: 19px;
     text-align: justified;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
   }
 
   button {
