--- a/css/index.css
+++ b/css/index.css
@@ -15,12 +15,13 @@
   height: 250px;
   position: relative;
   z-index: 2;
-  color: white;                    
+  color: white;
 
   div {
     max-width: 1920px;
     height: 250px;
-    background: #1d1d1d url(../image/backgroundImage.png) no-repeat right / 388.05px 368.16px;
+    background: #1d1d1d url(../image/backgroundImage.png) no-repeat right /
+      388.05px 368.16px;
     background-repeat: no-repeat;
     background-position: 105% 0%;
     background-size: 35%;
@@ -44,7 +45,8 @@
     min-height: 89px;
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
-    line-height: 19px;
+    font-weight: 400;
+    line-height: 20.8px;
     text-align: justified;
     margin-bottom: 15px;
   }
